# learngit

./: env.txt  readme.md
MMOpenGL/: CMakeLists.txt  MMHelloStatic.lib  glad.lib
MMOpenGL/MMGLShader/: CMakeLists.txt  MMGLShader.cpp  MMGLShader.hpp
MMOpenGL/MMHelloStatic/: CMakeLists.txt  MMHelloStatic.cpp  MMHelloStatic.hpp
MMOpenGL/MMOpenGL/: CMakeLists.txt  MMOpenGL.cpp  MMOpenGL.hpp
MMOpenGL/glad/: CMakeLists.txt  glad.c
